--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
                         <i class="la la-money"></i><span data-i18n="Templates">Aset & Keuangan</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li class="active" data-menu="">
+                        <li class="" data-menu="">
                             <a class="dropdown-item" href="asetKeu-pnbp.html" data-toggle="">
                                 <i class="la la-cc-paypal"></i><span data-i18n="PNBP">PNBP</span>
                             </a>
