--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
                                                 </div>
                                                 <div class="col-sm-6 col-12 float-sm-left text-center text-sm-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
                                             </div>
-                                            <a href="home.html" class="btn btn-outline-info btn-block"><i class="la la-key"></i> Login</a>
+                                            <a href="dashboard.html" class="btn btn-outline-info btn-block"><i class="la la-key"></i> Login</a>
                                         </form>
                                     </div>
                                     <p class="card-subtitle line-on-side text-muted text-center font-small-3 mx-2 my-1"><span>New to SIE ATRBPN
